--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     
+    <h1>Hello</h1>
     <div class="wrapper">
         <div class="timer">
             <div class="timer__line"></div>
